manifests/01_rethinkdb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tic-tac-toe
  name: rethinkdb
spec:
  selector:
    app.kubernetes.io/component: rethinkdb
  ports:
  - port: 28015
    name: client
  - port: 29015
    name: peer
  - port: 8080
    name: web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: tic-tac-toe
  name: rethinkdb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: rethinkdb
  serviceName: "rethinkdb"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: rethinkdb
    spec:
      containers:
      - name: rethinkdb
        image: rethinkdb:2.3.6
        ports:
        - containerPort: 28015
          name: client
        - containerPort: 29015
          name: cluster
        - containerPort: 8080
          name: web
        readinessProbe:
          tcpSocket:
            port: client
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: client
          initialDelaySeconds: 15
          periodSeconds: 20
