manifests/02_redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tic-tac-toe
  name: redis
spec:
  selector:
    app.kubernetes.io/component: redis
  ports:
  - port: 6379
    name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: tic-tac-toe
  name: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
  serviceName: "redis"
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      containers:
      - name: redis
        image: redis:5.0.4
        ports:
        - containerPort: 6379
          name: redis
