manifests/03_app.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tic-tac-toe
  name: app
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
  - port: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tic-tac-toe
  name: app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: app
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
    spec:
      containers:
      - name: app
        image: quay.io/ktbartholomew/tic-tac-toe-app:latest
        ports:
        - containerPort: 8080
          name: http
