manifests/04_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tic-tac-toe
  name: frontend
spec:
  selector:
    app.kubernetes.io/component: frontend
  ports:
  - port: 80
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: tic-tac-toe
  name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  replicas: 3
  template:
    metadata:
      labels:
        app.kubernetes.io/component: frontend
    spec:
      containers:
      - name: frontend
        image: quay.io/ktbartholomew/tic-tac-toe-frontend:latest
        ports:
        - containerPort: 80
          name: http
